--- a/static/styles.css
+++ b/static/styles.css
@@ -1,8 +1,12 @@
 label {
     display: inline-block;
 }
+.nav.navbar {
+  margin-bottom: 0px;
+}
 body,html{
     height: 100%;
+    margin: 0;
   }
 
   nav.sidebar, .main{
