--- a/templates/search.html
+++ b/templates/search.html
@@ -1,18 +1,49 @@
-{% extends 'base.html' %}
-
+{% extends 'base.html' %} 
+{% block title %} Search {% endblock %} 
 {% block content %}
-
-<h1>Search for candidate</h1>
-<form class="form-search" id="form-search">
-  <div class="input-append">
-    <input type="text" id="text" class="span2 search-query input-xxlarge" placeholder="Search here">
-    <button type="submit" class="btn">Search</button>
-  </div>
-</form>
-<div class="results">
-    
+<div id="wrapper">
+    <!-- Sidebar -->
+    <div id="sidebar-wrapper">
+        <ul class="sidebar-nav">
+            <li class="sidebar-brand">
+                <div id="menu-toggle">Hide Sidebar</div>
+            </li>
+            <li>
+                <a href="/data">View all</a>
+            </li>
+            <li>
+                <a href="/interviews">Your interviews</a>
+            </li>
+            <li>
+                <a href="/tool">Tool</a>
+            </li>
+            <li>
+                <a href="/search">Search</a>
+            </li>
+        </ul>
+    </div>
+    <div id="page-content-wrapper">
+        <div class='container-fluid'>
+            <h1>Search for candidate</h1>
+            <form class="form-search" id="form-search">
+                <div class="input-append">
+                    <input type="text" id="text" class="span2 search-query input-xxlarge" placeholder="Search here">
+                    <button type="submit" class="btn">Search</button>
+                </div>
+            </form>
+            <div class="results">
+            </div>
+        </div>
+    </div>
 </div>
-
+<!-- Hides side menu -->
+    <script>
+    $(".navbar navbar-inverse").click(function(e) {
+        e.preventDefault();
+        $("#wrapper").toggleClass("toggled");
+    });
+    </script>
+<!-- Search form action -->
 <script>
 function searchQuery(evt) {
     evt.preventDefault();
@@ -21,8 +52,8 @@ function searchQuery(evt) {
         'search_query': query,
     }
     $.ajax({
-        type : "POST",
-        url : '/search',
+        type: "POST",
+        url: '/search',
         data: JSON.stringify(data, null, '\t'),
         contentType: 'application/json;charset=UTF-8',
         success: function(result) {
@@ -30,14 +61,14 @@ function searchQuery(evt) {
             console.log(Object.keys(result));
             console.log(Object.keys(result).length);
             $('.results').append(result);
-            
+
             var keys = Object.keys(result);
             $('.results').append(keys.length + ' results was found');
-            for (var i=0; i < keys.length; i++) {
-                $('.results').append("<div id="+ keys[i] +" class='search-result'>"+ (i+1) +": ");
+            for (var i = 0; i < keys.length; i++) {
+                $('.results').append("<div id=" + keys[i] + " class='search-result'>" + (i + 1) + ": ");
                 console.log(result[keys[i]].user)
-                $('#'+keys[i]).append('Name: ' + result[keys[i]].user + '<br /> Email: ' + result[keys[i]].email + '<br />');
-                
+                $('#' + keys[i]).append('Name: ' + result[keys[i]].user + '<br /> Email: ' + result[keys[i]].email + '<br />');
+
             }
         }
     });
@@ -45,7 +76,5 @@ function searchQuery(evt) {
     console.log("Finished sending AJAX");
 }
 $("#form-search").on("submit", searchQuery);
-
 </script>
-
 {% endblock %}
