Added user_type session and logic to redirect user from main page

--- a/templates/search.html
+++ b/templates/search.html
@@ -36,13 +36,7 @@
         </div>
     </div>
 </div>
-<!-- Hides side menu -->
-    <script>
-    $(".navbar navbar-inverse").click(function(e) {
-        e.preventDefault();
-        $("#wrapper").toggleClass("toggled");
-    });
-    </script>
+
 <!-- Search form action -->
 <script>
 function searchQuery(evt) {
@@ -60,14 +54,14 @@ function searchQuery(evt) {
             console.log(result);
             console.log(Object.keys(result));
             console.log(Object.keys(result).length);
-            $('.results').append(result);
 
             var keys = Object.keys(result);
-            $('.results').append(keys.length + ' results was found');
+            $('.results').text(keys.length + ' results was found');
             for (var i = 0; i < keys.length; i++) {
-                $('.results').append("<div id=" + keys[i] + " class='search-result'>" + (i + 1) + ": ");
-                console.log(result[keys[i]].user)
-                $('#' + keys[i]).append('Name: ' + result[keys[i]].user + '<br /> Email: ' + result[keys[i]].email + '<br />');
+                snippet = result[keys[i]].resume
+                $('.results').append("<div id=" + keys[i] + " class='search-result'>" + (i + 1) + ": " + 'Name: ' + 
+                    "<a href='/users/"+ keys[i] +"'>"+ result[keys[i]].user +"</a>" + ' Email: ' + result[keys[i]].email + '<br />' + snippet.slice(0, 140) + '<br>');
+                console.log(result[keys[i]].user);
 
             }
         }
