--- a/templates/base.html
+++ b/templates/base.html
@@ -25,8 +25,23 @@
     </div>
     <div class="collapse navbar-collapse" id="myNavbar">
       <ul class="nav navbar-nav">
-        <li><a href="/#about">About</a></li>
+      {% if session.get('user_type') %}
+          {% if session['user_type'] == 'recruiter' %}
+        <li><a href="/data">All applicants</a></li>
       </ul>
+            <ul class="nav navbar-nav">
+        <li><a href="/interviews">Interviews</a></li>
+      </ul>
+            <ul class="nav navbar-nav">
+        <li><a href="/search">Search</a></li>
+      </ul>
+        {% endif %}
+      {% else %}
+            </ul>
+            <ul class="nav navbar-nav">
+        <li><a href="/submit-application">Submit Application</a></li>
+      </ul>
+      {% endif %}
       <ul class="nav navbar-nav navbar-right">
         {% if session.get("email") %}
         
