Haven't done anything valuable, small changes in HTML

--- a/templates/tool.html
+++ b/templates/tool.html
@@ -60,7 +60,7 @@ $(function () {
         });
 
         socket.emit('room_name', window.location.pathname.split('/')[2]);
-        
+
         return false;
     });
 
@@ -97,9 +97,9 @@ $(function () {
     </div>
     
   </div>
-<!--   <div> -->
+
 <pre><code class="python">
-    <div id="tool" name="tool" contentEditable="true">Code here</div>
+    <div id="tool" name="tool" contentEditable="true" style="margin-top: 0px; width: 900px; height: 358px; margin-left: 0px; ">Code here</div>
 </code></pre>
-<!--   </div> -->
+
 {% endblock %}
